# AEGIS

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  001_float_to_numeric_usd_columns.py  001_initial.py  002_audit_immutability.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: agents.py  audit.py  auth.py  dashboard.py  policies.py  proxy.py  sso.py  wallets.py  websocket.py
backend/app/middleware/: auth_middleware.py  pure_asgi.py
backend/app/models/: database.py  entities.py
backend/app/schemas/: schemas.py
backend/scripts/: generate_rsa_keys.py
backend/test/: conftest.py  test_anomaly_detector.py  test_audit_buffer.py  test_circuit_breaker.py  test_core.py  test_crypto.py  test_e2e_api.py  test_enterprise.py  test_firewall_evasion.py  test_forensic_export.py  test_idempotency.py  test_prompt_firewall.py  test_simulation_breach.py  test_ssrf_guard.py  test_trust_engine.py  test_wallet_service.py  test_webhook_signer.py
docs/: ha-infrastructure.md
frontend/: .dockerignore  Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
helm/aegis/: Chart.yaml  values.yaml
monitoring/: prometheus.yml
nginx/: generate-cert.sh  nginx.conf
policies/: main.rego  main_test.rego
scripts/: backup-postgres.sh  deploy_gcp.sh
sdk/: aegis_sdk.py  pyproject.toml
(+70 files in other folders)
